main, banner and navigation created

--- a/index.html
+++ b/index.html
@@ -91,7 +91,36 @@
         </header>
 
         <main>
+            <!-- Banner per effettuare l'upgrade -->
+            <div class="main-banner">
+                <button class="main-banner__button">Effettua l'upgrade</button>
+            </div>
 
+            <!-- Contenitore della gallery e del menù in alto -->
+            <div class="main-content">
+                <nav class="navigation">
+                    <div class="navigation__item">
+                        <a>In evidenza</a>
+                        <span></span>
+                    </div>
+                    <div class="navigation__item">
+                        <a>Podcast</a>
+                    </div>
+                    <div class="navigation__item">
+                        <a>Classifiche</a>
+                    </div>
+                    <div class="navigation__item">
+                        <a>Generi e mood</a>
+                    </div>
+                    <div class="navigation__item">
+                        <a>Nuove uscite</a>
+                    </div>
+                    <div class="navigation__item">
+                        <a>Scopri</a>
+                    </div>
+                    
+                </nav>
+            </div>
         </main>
 
         <footer>
