Playlist created and thumbnail implementation

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
             <!-- Contenitore della gallery e del menù in alto -->
             <div class="main-content">
+                <!-- Menù in alto della pagina -->
                 <nav class="navigation">
                     <div class="navigation__item">
                         <a>In evidenza</a>
@@ -117,9 +118,38 @@
                     </div>
                     <div class="navigation__item">
                         <a>Scopri</a>
-                    </div>
-                    
+                    </div>                    
                 </nav>
+
+                <!-- Sezione delle ultime playlist riprodotte -->
+                <section class="main-content__played">
+                    <h1>Recently Played</h1>
+                    <div class="wrap-playlist">
+                        <!-- Playlist contente l'immagine ed il testo -->
+                        <div class="playlist">
+                            <div class="playlist__thumbnail">
+                                <img src="img/metal_lifting.jpg" alt="Heavy metal">
+                                <i class="far fa-play-circle"></i>
+                            </div>
+                            <div class="playlist__text-content">
+                                <h2>Heave Metal</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+                        
+
+                    </div>
+                </section>
+
+                <!-- Sezione delle playlist create per l'utente -->
+                <section>
+
+                </section>
+
+                <!-- Sezione degli artisti più popolari -->
+                <section>
+
+                </section>
             </div>
         </main>
 
