playlist, first row displayed

--- a/index.html
+++ b/index.html
@@ -127,16 +127,72 @@
                     <div class="wrap-playlist">
                         <!-- Playlist contente l'immagine ed il testo -->
                         <div class="playlist">
+                            <!-- Contenitore dell'immagine e dell'icona che appare con l'hover -->
                             <div class="playlist__thumbnail">
                                 <img src="img/metal_lifting.jpg" alt="Heavy metal">
                                 <i class="far fa-play-circle"></i>
                             </div>
+                            <!-- Contenitore del testo al di sotto della thumbnail -->
                             <div class="playlist__text-content">
                                 <h2>Heave Metal</h2>
                                 <h3>Subtitle</h3>
                             </div>
                         </div>
                         
+                        <div class="playlist">
+                            <div class="playlist__thumbnail">
+                                <img src="img/stranger.jpeg" alt="Stranger Things">
+                                <i class="far fa-play-circle"></i>
+                            </div>
+                            <div class="playlist__text-content">
+                                <h2>Stranger Things, Vol. 1(a Netflix Original Series Soundtrack)</h2>
+                                <h3>Kyle Dixon & Michael Stein</h3>
+                            </div>
+                        </div>
+
+                        <div class="playlist">
+                            <div class="playlist__thumbnail">
+                                <img src="img/aquietplace.jpeg" alt="A quiet place">
+                                <i class="far fa-play-circle"></i>
+                            </div>
+                            <div class="playlist__text-content">
+                                <h2>A quiet place</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+
+                        <div class="playlist">
+                            <div class="playlist__thumbnail">
+                                <img src="img/split.jpeg" alt="Split">
+                                <i class="far fa-play-circle"></i>
+                            </div>
+                            <div class="playlist__text-content">
+                                <h2>Split</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+
+                        <div class="playlist">
+                            <div class="playlist__thumbnail">
+                                <img src="img/cure.jpeg" alt="A cure for wellness">
+                                <i class="far fa-play-circle"></i>
+                            </div>
+                            <div class="playlist__text-content">
+                                <h2>A cure for wellness</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
+
+                        <div class="playlist">
+                            <div class="playlist__thumbnail">
+                                <img src="img/sinister.jpeg" alt="Sinister">
+                                <i class="far fa-play-circle"></i>
+                            </div>
+                            <div class="playlist__text-content">
+                                <h2>Sinister</h2>
+                                <h3>Subtitle</h3>
+                            </div>
+                        </div>
 
                     </div>
                 </section>
