--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Link al CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/query.css">
 
     <title>Spotify Web App</title>
 </head>
