Footer created, none total responsive

--- a/index.html
+++ b/index.html
@@ -280,15 +280,13 @@
 
         <footer>
             <div class="footer-content">
-                <div class="playbar playbar_left">
+                <div class="playbar playbar_side">
                     <div class="playbar__content">
                         <img src="img/sinister.jpeg" alt="Sinister ">
                         <div>
                             <h3>Sinister</h3>
-                            <p>Brano Nome</p>
+                            <h4>Brano Nome</h4>
                         </div>
-                    </div>
-                    <div class="playbar__content">
                         <i class="far fa-heart"></i>
                         <i class="far fa-folder"></i>
                     </div>
@@ -303,19 +301,23 @@
                         <i class="fas fa-redo-alt"></i>
                     </div>
                     <div class="playbar__content">
-
+                        <span>1:23</span>
+                        <div class="bar bar_bg bar_song">
+                            <div class="bar bar_progress"></div>
+                        </div>
+                        <span>3:45</span>
                     </div>
                 </div>
 
-                <div class="playbar playbar_right">
+                <div class="playbar playbar_side">
                     <div class="playbar__content">
                         <i class="fas fa-list-ul"></i>
                         <i class="fas fa-desktop"></i>
                         <i class="fas fa-volume-up"></i>
                         <!-- <i class="fas fa-volume-mute"></i> -->
-                    </div>
-                    <div class="playbar__content">
-
+                        <div class="bar bar_bg bar_vol">
+                            <div class="bar bar_progress"></div>
+                        </div>
                     </div>
                 </div>
             </div>
