--- a/index.html
+++ b/index.html
@@ -287,8 +287,10 @@
                             <h3>Sinister</h3>
                             <h4>Brano Nome</h4>
                         </div>
-                        <i class="far fa-heart"></i>
-                        <i class="far fa-folder"></i>
+                        <div>                            
+                            <i class="far fa-heart"></i>
+                            <i class="far fa-folder"></i>
+                        </div>
                     </div>
                 </div>
                 
