--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                     <!-- Contenitore per il logo di Spotify -->
                     <div class="sidebar-top">
                         <!-- Utile per l'adattamento con il responsive -->
-                        <div class="sidebar-top__logo">
-                            <img src="img/logo.svg" alt="">
+                        <div class="sidebar-top__logo mrg-bot20">
+                            <img src="img/logo.svg" alt="logo con scritta">
+                            <img src="img/logo-small.svg" alt="piccolo logo">
                         </div>
                         <!-- Parte in alto del menù, con le tre funzionalità per cambiare pagina -->
                         <div class="sidebar-top__menu mrg-bot20">
@@ -76,16 +77,16 @@
 
                     <!-- Link al download dell'app ed al profilo utente -->
                     <div class="sidebar-bot">
-                        <div class="sidebar-bot__download">
+                        <div class="sidebar-bot__download mrg-bot20">
                             <a href="#">
                                 <i class="far fa-arrow-alt-circle-down"></i>
                                 <span>Installa app</span>
                             </a>
                         </div>
                         
-                        <hr>
+                        <hr class="mrg-bot20">
 
-                        <div class="sidebar-bot__account">
+                        <div class="sidebar-bot__account mrg-bot20">
                             <a href="#">
                                 <img src="img/profile.svg" alt="">
                                 <span>John Doe</span>
