sidebar height, sidebar padding update

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                     <!-- Contenitore per il logo di Spotify -->
                     <div class="sidebar-top">
                         <!-- Utile per l'adattamento con il responsive -->
-                        <div class="sidebar-top__logo mrg-bot20">
+                        <div class="sidebar-top__logo mrg-bot20 pdd-10-15">
                             <img src="img/logo.svg" alt="logo con scritta">
                             <img src="img/logo-small.svg" alt="piccolo logo">
                         </div>
                         <!-- Parte in alto del menù, con le tre funzionalità per cambiare pagina -->
-                        <div class="sidebar-top__menu mrg-bot20">
+                        <div class="sidebar-top__menu pdd-10-15">
                             <!-- <ul>
                                 <li class="menu-bar__home"><a href="#"><img src="img/home.svg" alt=""><span>Home</span></a></li>
                                 <li class="menu-bar__search"><a href="#">Cerca</a></li>
@@ -50,9 +50,9 @@
                             </a>
                         </div>
                         <!-- Funzionalità per creare una nuova playlist -->
-                        <div class="sidebar-top__newlist mrg-bot20">
+                        <div class="sidebar-top__newlist pdd-10-15">
                             <h1 class="mrg-bot10">Playlist</h1>
-                            <div class="mrg-bot20">
+                            <div>
                                 <a href="#">
                                     <i class="fas fa-plus"></i>
                                     <span>Crea Playlist</span>
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <!-- Lista delle playlist create -->
-                        <div class="sidebar-top__playlist">
+                        <div class="sidebar-top__playlist pdd-10-15">
                             <ul>
                                 <li class="mrg-bot10"><a href="#">Nome Playlist</a></li>
                                 <li class="mrg-bot10"><a href="#">Nome Playlist</a></li>
@@ -76,7 +76,7 @@
                     </div>
 
                     <!-- Link al download dell'app ed al profilo utente -->
-                    <div class="sidebar-bot">
+                    <div class="sidebar-bot pdd-10-15">
                         <div class="sidebar-bot__download mrg-bot20">
                             <a href="#">
                                 <i class="far fa-arrow-alt-circle-down"></i>
