Update names titles of the playlists

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         -->
                         
                         <!-- Titolo della serie di playlist -->
-                        <h2>Recently Played</h2>
+                        <h2>Creato per John Doe</h2>
                         <p>Pi&uacute; ascolti, pi&uacute; accurati saranno i suggerimenti.</p>
 
                         <div class="wrap-playlist">
@@ -260,7 +260,7 @@
                         -->
 
                         <!-- Titolo della serie di playlist -->
-                        <h2>Recently Played</h2>
+                        <h2>Artisti pi&uacute; popolari</h2>
                         <p>Pi&uacute; ascolti, pi&uacute; accurati saranno i suggerimenti.</p>
                             
                         <div class="wrap-playlist">
